lab1/log/build_2025-09-08_14-52-12/my_chatter/stdout_stderr.log
running egg_info
creating ../../build/my_chatter/my_chatter.egg-info
writing ../../build/my_chatter/my_chatter.egg-info/PKG-INFO
writing dependency_links to ../../build/my_chatter/my_chatter.egg-info/dependency_links.txt
writing entry points to ../../build/my_chatter/my_chatter.egg-info/entry_points.txt
writing requirements to ../../build/my_chatter/my_chatter.egg-info/requires.txt
writing top-level names to ../../build/my_chatter/my_chatter.egg-info/top_level.txt
writing manifest file '../../build/my_chatter/my_chatter.egg-info/SOURCES.txt'
reading manifest file '../../build/my_chatter/my_chatter.egg-info/SOURCES.txt'
writing manifest file '../../build/my_chatter/my_chatter.egg-info/SOURCES.txt'
running build
running build_py
creating /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/build/my_chatter/build
creating /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/build/my_chatter/build/lib
creating /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/build/my_chatter/build/lib/my_chatter
copying my_chatter/__init__.py -> /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/build/my_chatter/build/lib/my_chatter
copying my_chatter/publisher.py -> /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/build/my_chatter/build/lib/my_chatter
copying my_chatter/subscriber.py -> /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/build/my_chatter/build/lib/my_chatter
running install
running install_lib
creating /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/python3.10/site-packages/my_chatter
copying /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/build/my_chatter/build/lib/my_chatter/__init__.py -> /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/python3.10/site-packages/my_chatter
copying /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/build/my_chatter/build/lib/my_chatter/publisher.py -> /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/python3.10/site-packages/my_chatter
copying /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/build/my_chatter/build/lib/my_chatter/subscriber.py -> /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/python3.10/site-packages/my_chatter
byte-compiling /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/python3.10/site-packages/my_chatter/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/python3.10/site-packages/my_chatter/publisher.py to publisher.cpython-310.pyc
byte-compiling /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/python3.10/site-packages/my_chatter/subscriber.py to subscriber.cpython-310.pyc
  File "/home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/python3.10/site-packages/my_chatter/subscriber.py", line 35
    self.get_logger().info(f" 
                           ^
SyntaxError: unterminated string literal (detected at line 35)

running install_data
copying resource/my_chatter -> /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/share/ament_index/resource_index/packages
copying package.xml -> /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/share/my_chatter
running install_egg_info
Copying ../../build/my_chatter/my_chatter.egg-info to /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/python3.10/site-packages/my_chatter-0.0.0-py3.10.egg-info
running install_scripts
Installing listener script to /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/my_chatter
Installing talker script to /home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/install/my_chatter/lib/my_chatter
writing list of installed files to '/home/cc/ee106a/fa25/class/ee106a-abw/ros_workspaces/lab1/build/my_chatter/install.log'
